--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,7 @@
         "fideloper/proxy": "^4.0",
         "laravel/framework": "^6.2",
         "laravel/tinker": "^1.0",
+        "spatie/laravel-activitylog": "^3.9",
         "uxweb/sweet-alert": "^2.0"
     },
     "require-dev": {
