--- a/.env.example
+++ b/.env.example
@@ -42,3 +42,7 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+EBULK_SMS=http://api.ebulksms.com:8080/sendsms.json
+EBULK_SMS_USERNAME:profchydon@gmail.com
+EBULK_SMS_KEY:8db8c2ca14f660965f21e18d4fb69124e728d01f
